# sundays

./: .dir-locals.el  .gitignore  Makefile  shell.nix  sundays.cabal
app/: Main.hs
src/: Sundays.hs
