cabal-version: 1.12
name:          sundays
version:       0.0.0.1
synopsis:
  Sundays in a given year for Risk/Catan planning.

description:
  Prints Sundays -- from the current date -- in a given year to
  facilitate Risk/Catan planning.
  
category:      Date,Time,Planning
stability:     development
license:       GPL-3
build-type:    Simple

library
  exposed-modules:
    Sundays

  other-modules:    Paths_sundays
  hs-source-dirs:   src
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
    -fno-warn-missing-signatures -fno-warn-type-defaults
    -fno-warn-orphans

  build-depends:
      base
    , containers
    , time

  default-language: Haskell2010

executable sundays
  main-is:          Main.hs
  other-modules:    Paths_sundays
  hs-source-dirs:   app
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
    -fno-warn-missing-signatures -fno-warn-type-defaults
    -fno-warn-orphans -threaded

  build-depends:
      base
    , sundays
    , optparse-applicative

  default-language: Haskell2010
